syntax = "proto3";

package godtoken;

message GetTokenReq {
    string rid = 1;
}

message GetTokenRes {
    string token = 1;
}

message VerifyReq {
    string rid = 1;
    string token = 2;
}

message VerifyRes {
    bool ok = 1;
}

service Service {
    rpc GetToken (GetTokenReq) returns (GetTokenRes);
    rpc Verify (VerifyReq) returns (VerifyRes);
}